--- a/Front-end/landing-page.html
+++ b/Front-end/landing-page.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR|Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css\style.css">
@@ -22,26 +23,73 @@
 
 </head>
 
-<body>  
-    <div ng-app = "app">
-    <div class="contain" style="background-image:url('images/shanghai-1484452_1920.jpg');background-repeat:no-repeat;opacity:0.9;background-size: 100% 100%;" >
-        <img src="images\Vector2.png" width="27%" height="85%" class="vector2" >
-        <div class="header">
-            <a href="#default" class="logo"><img src="images\citi_logo.jpg" style="width:118px;height:74px;"></a>
-            <img src="images/Vector.jpg"><img src="images\lms.png" style="padding-left: 1%">
-            
-            <div class="header-right">
-              <a  href="#home">HOME</a>
-              <a href="#contact">SERVICES</a>
-              <a href="#about">OUR PROCESSES</a>
-              <a href="#clients">CLIENTS</a>
-              <a href="#login">LOGIN</a>
+<body>
+    <div>
+        <div class="contain"
+            style="background-image:url('images/shanghai-1484452_1920.jpg');background-repeat:no-repeat;opacity:0.9;background-size: 100% 100%;">
+            <img src="images\Vector2.png" width="27%" height="85%" class="vector2">
+            <div class="header">
+                <a href="#default" class="logo" style="padding: 12px"><img src="images\citi_logo.jpg"
+                        style="width:118px;height:74px;"></a>
+                <img src="images/Vector.jpg"><img src="images\lms.png" style="padding-left: 1%">
+
+                <div class="header-right">
+                    <a href="#home"><b>HOME</b></a>
+                    <a href="#contact"><b>SERVICES</b></a>
+                    <a href="#about"><b>OUR PROCESSES</b></a>
+                    <a href="#clients"><b>CLIENTS</b></a>
+                    <a href="#login"><b><span style="padding-right: 4px;"><i class="fa fa-user"
+                                    aria-hidden="true"></i></span>LOGIN</b></a>
+                </div>
             </div>
+
+            <img id="managing_funds" src="images/funds.png">
+
         </div>
 
-        <img id="managing_funds" src="images/funds.png">
+        <div class="about_us">
+            <div>
+                <h1>ABOUT US</h1>
+            </div>
 
-    </div>
+
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-4" align="center">
+                            <div class="card" style="width: 22rem;">
+                                    <img class="card-img-top" src="images/whatwedo.jpg" alt="Card image cap">
+                                    <div class="card-body">
+                                      <p class="card-text"><b>WHAT WE DO</b></p>
+                                    </div>
+                                  </div>
+                    </div>
+                    <div class="col-md-4" align="center">
+                            <div class="card" style="width: 22rem;">
+                                    <img class="card-img-top" src="images/howwedo.jpg" alt="Card image cap">
+                                    <div class="card-body">
+                                      <p class="card-text"><b>HOW WE DO</b></p>
+                                    </div>
+                                  </div>
+
+                    </div>
+                    <div class="col-md-4" align="center">
+                            <div class="card" style="width: 22rem;">
+                                    <img class="card-img-top" src="images/image.jpg" alt="Card image cap">
+                                    <div class="card-body">
+                                      <p class="card-text"><b>OUR CLIENTS</b></p>
+                                    </div>
+                                  </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="footer">
+
+        </div>
+
+
     </div>
 </body>
 
