Landing page completed

--- a/Front-end/landing-page.html
+++ b/Front-end/landing-page.html
@@ -48,37 +48,37 @@
         </div>
 
         <div class="about_us">
-            <div>
-                <h1>ABOUT US</h1>
+            <div class="about-us-heading">
+                <h1><b>ABOUT US</b></h1>
             </div>
 
 
-            <div class="container-fluid">
+            <div class="container-fluid first-container">
                 <div class="row">
                     <div class="col-md-4" align="center">
-                            <div class="card" style="width: 22rem;">
-                                    <img class="card-img-top" src="images/whatwedo.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                      <p class="card-text"><b>WHAT WE DO</b></p>
-                                    </div>
-                                  </div>
+                        <div class="card" style="width: 22rem;">
+                            <img class="card-img-top" src="images/whatwedo.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <p class="card-text"><b>WHAT WE DO</b></p>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4" align="center">
-                            <div class="card" style="width: 22rem;">
-                                    <img class="card-img-top" src="images/howwedo.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                      <p class="card-text"><b>HOW WE DO</b></p>
-                                    </div>
-                                  </div>
+                        <div class="card" style="width: 22rem;">
+                            <img class="card-img-top" src="images/howwedo.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <p class="card-text"><b>HOW WE DO</b></p>
+                            </div>
+                        </div>
 
                     </div>
                     <div class="col-md-4" align="center">
-                            <div class="card" style="width: 22rem;">
-                                    <img class="card-img-top" src="images/image.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                      <p class="card-text"><b>OUR CLIENTS</b></p>
-                                    </div>
-                                  </div>
+                        <div class="card" style="width: 22rem;">
+                            <img class="card-img-top" src="images/image.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <p class="card-text"><b>OUR CLIENTS</b></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -86,9 +86,47 @@
         </div>
 
         <div class="footer">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-2">
+                        <div class="footer-links" id="first_section">
+                            <ul style="padding-left: 25px;">
+                                <li><a href="#home">HOME</a></li>
+                                <li><a href="#services">SERVICES</a></li>
+                                <li><a href="#clients">CLIENTS</a></li>
+                                <li><a href="#about">OUR PROCESSES</a></li>
+                            </ul>
 
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="footer-links">
+                            <ul>
+                                <li><a href="#">TERMS & CONDITIONS</a></li>
+                                <li><a href="#">PRIVACY POLICY</a></li>
+                                <li><a href="#">COOKIE CONSENT</a></li>
+                                <li><a href="#">LEGAL DISCLAIMER</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    
+                    <div class="col-md-7">
+                        <div class="footer_corner">
+                            <div class="row" >
+                                <p id="Contact_us">Contact us on.</p>
+                            </div>
+                            <div class="row">
+                                <a href=""><img src="images/icon.png"></a>
+                            </div>
+                            <div class="row" id="copyright">
+                                <p>&copy 2019 CitiCorp.All Rights Reserved.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
 
     </div>
 </body>
