--- a/Front-end/login-page.html
+++ b/Front-end/login-page.html
@@ -29,9 +29,10 @@
                 <div class="card bg-light mb-3 login-card-position" style="max-width: 25rem;">
                     <div class="card-body">
                         <div>
-                                <span><i class="fa fa-unlock-alt" style="font-size: 3em;" aria-hidden="true"></i></span>
+                            <span><i class="fa fa-unlock-alt" style="font-size: 3em;" aria-hidden="true"></i></span>
                         </div>
-                        <h5 class="card-title content" style="color: #003A83">Login in with Username and <br> Password</h5>
+                        <h5 class="card-title content" style="color: #003A83">Login in with Username and <br> Password
+                        </h5>
                         <p class="card-text">
                             <br><br>
                             <form class="was-validation">
@@ -62,15 +63,20 @@
                                 <br>
                                 <center>
                                     <a href="#">
-                                        <button class="btn btn-primary content" style="background-color: #003A83" type="button">Sign in now&nbsp;
-                                                <i class="fa fa-arrow-right" style="font-size: 1em; color: white;" aria-hidden="true"></i>
+                                        <button class="btn btn-primary button-content" style="background-color: #003A83"
+                                            type="button">Sign in now&nbsp;
+                                            <i class="fa fa-arrow-right" style="font-size: 1em; color: white;"
+                                                aria-hidden="true"></i>
                                         </button>
                                     </a>
-                                </center>              
+                                </center>
                             </form>
                             <br> <br>
                             <center>
-                                <a href="#"><span class="content" style="color: gray">Forgot Password</span></a>&nbsp;|&nbsp;<span class="content" style="color: black">New User?</span>&nbsp;<a href="#"><span class="content" style="color:#003A83">Sign Up</span></a> 
+                                <a href="#"><span class="content" style="color: gray">Forgot
+                                        Password</span></a>&nbsp;|&nbsp;<span class="content" style="color: black">New
+                                    User?</span>&nbsp;<a href="signup-page.html"><span class="content" style="color:#003A83">Sign
+                                        Up</span></a>
                             </center>
                         </p>
                     </div>
