landing page updated with login link

--- a/Front-end/landing-page.html
+++ b/Front-end/landing-page.html
@@ -38,7 +38,7 @@
                     <a href="#contact"><b>SERVICES</b></a>
                     <a href="#about"><b>OUR PROCESSES</b></a>
                     <a href="#clients"><b>CLIENTS</b></a>
-                    <a href="#login"><b><span style="padding-right: 4px;"><i class="fa fa-user"
+                    <a href="login-page.html"><b><span style="padding-right: 4px;"><i class="fa fa-user"
                                     aria-hidden="true"></i></span>LOGIN</b></a>
                 </div>
             </div>
