Added header and foter to login and signup

--- a/Front-end/landing-page.html
+++ b/Front-end/landing-page.html
@@ -12,7 +12,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css\style.css">
-    <style>
+    <link rel="stylesheet" href="css\header.css">
+    <link rel="stylesheet" href="css\footer.css">
+<style>
         .main-heading {
             font-family: 'Quicksand', sans-serif;
             font-size: 60px;
@@ -25,11 +27,10 @@
 
 <body>
     <div>
-        <div class="contain"
-            style="background-image:url('images/shanghai-1484452_1920.jpg');background-repeat:no-repeat;opacity:0.9;background-size: 100% 100%;">
+        <div class="contain" style="background-image:url('images/shanghai-1484452_1920.jpg');background-repeat:no-repeat;opacity:0.9;background-size: 100% 100%;">
             <img src="images\Vector2.png" width="27%" height="85%" class="vector2">
             <div class="header">
-                <a href="#default" class="logo" style="padding: 12px"><img src="images\citi_logo.jpg"
+                <a href="landing-page.html" class="logo" style="padding: 12px"><img src="images\citi_logo.png"
                         style="width:118px;height:74px;"></a>
                 <img src="images/Vector.jpg"><img src="images\lms.png" style="padding-left: 1%">
 
