Added on Hover functionality

--- a/Front-end/landing-page.html
+++ b/Front-end/landing-page.html
@@ -35,10 +35,10 @@
                 <img src="images/Vector.jpg"><img src="images\lms.png" style="padding-left: 1%">
 
                 <div class="header-right">
-                    <a href="#home"><b>HOME</b></a>
-                    <a href="#contact"><b>SERVICES</b></a>
-                    <a href="#about"><b>OUR PROCESSES</b></a>
-                    <a href="#clients"><b>CLIENTS</b></a>
+                    <a href="landing-page.html"><b>HOME</b></a>
+                    <a href="#contact"><b>ABOUT US</b></a>
+                    <a href="#about"><b>CLIENTS</b></a>
+                    <a href="#clients"><b>CONTACT US</b></a>
                     <a href="login-page.html"><b><span style="padding-right: 4px;"><i class="fa fa-user"
                                     aria-hidden="true"></i></span>LOGIN</b></a>
                 </div>
