--- a/Front-end/login-page.html
+++ b/Front-end/login-page.html
@@ -28,7 +28,7 @@
                 style="padding-left: 1%; width: 151px; height: 64px;">
 
             <div class="header-right">
-                <a href="#home"><b>HOME</b></a>
+                <a href="landing-page.html"><b>HOME</b></a>
                 <a href="#contact"><b>SERVICES</b></a>
                 <a href="#about"><b>OUR PROCESSES</b></a>
                 <a href="#clients"><b>CLIENTS</b></a>
