Added content to Login page

--- a/Front-end/signup-page.html
+++ b/Front-end/signup-page.html
@@ -17,9 +17,10 @@
 </head>
 
 <body style="background-color: #003A83">
-    <div class="main-heading">
-        <p><b>Welcome</b> <span class="main-heading-light"> to Liquidity <br> Management Solution</span></p>
+    <div class="main-heading" align=center>
+        <p><b>Welcome</b> <span class="main-heading-light"> to Liquidity Management Solution</span></p>
     </div>
+    <div class="main-sub-heading"><b>Create Account</b></div>
     <div class="card bg-light mb-3" style="max-width: 50rem;">
         <div class="card-body">
             <h5 class="card-title content" style="color: #003A83"> Please enter your details
