--- a/Front-end/login-page.html
+++ b/Front-end/login-page.html
@@ -24,6 +24,7 @@
                     <p class="main-heading-position"><b>Welcome</b> <span class="main-heading-light"> to Citi's
                             Liquidity Management System</span></p>
                 </div>
+                <div class="main-sub-heading"><p class="main-heading-position" style="font-size:80%" > Cash management was never easier </p></div>
             </div>
             <div class="col-md-6">
                 <div class="card bg-light mb-3 login-card-position" style="max-width: 25rem;">
@@ -31,7 +32,7 @@
                         <div>
                             <span><i class="fa fa-unlock-alt" style="font-size: 3em;" aria-hidden="true"></i></span>
                         </div>
-                        <h5 class="card-title content" style="color: #003A83">Login in with Username and <br> Password
+                        <h5 class="card-title content" style="color: #003A83">Login in with Username<br> and Password
                         </h5>
                         <p class="card-text">
                             <br><br>
