--- a/Front-end/dashboard.html
+++ b/Front-end/dashboard.html
@@ -270,7 +270,7 @@
                                                         </thead>
                                                         <tbody>
                                                             <tr>
-                                                                <th scope="row">EUR</th>
+                                                                <th scope="row">USD</th>
                                                                 <td>100.24</td>
     
                                                             </tr>
@@ -279,7 +279,7 @@
                                                                 <td>101.24</td>                                                                
                                                             </tr>
                                                             <tr>
-                                                                    <th scope="row">GBP</th>
+                                                                    <th scope="row">EUR</th>
                                                                     <td>101.24</td>                                                                
                                                             </tr>
                                                         </tbody>
