USD Transaction Page Completed

--- a/Front-end/dashboard.html
+++ b/Front-end/dashboard.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css\dashboard.css">
     <link rel="stylesheet" href="css\footer.css">
-    <link rel="stylesheet" href="css\footer.css">
     <link rel="stylesheet" href="css\tables.css">
     <link rel="stylesheet" href="fontawesome\css\all.css">
     <!-- Icons -->
@@ -88,9 +87,8 @@
 
                             <div class="col-md-6 ">
                                 <div class="icons-right" style="padding-right:4%">
-                                    <i class="fa fa-bell fa-2x" aria-hidden="true"></i>
-
-                                    <i class="fa fa-user fa-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-bell fa-2x" aria-hidden="true"></i>                              
+                                    <a href="#"><i class="fas fa-sign-out-alt fa-2x"></i></a>
                                 </div>
 
                             </div>
