--- a/Front-end/login-page.html
+++ b/Front-end/login-page.html
@@ -24,7 +24,7 @@
         <div class="header">
             <a href="landing-page.html" class="logo" style="padding: 12px"><img src="images\Group.png"
                     style="width:118px;height:64px;"></a>
-            <img src="images/line2.png" style="height: 83.5px;"><img src="images\lms2.png"
+            <img src="images\Line.png" style="height: 83.5px;"><img src="images\lms2.png"
                 style="padding-left: 1%; width: 151px; height: 64px;">
 
             <div class="header-right">
