--- a/Front-end/usd.html
+++ b/Front-end/usd.html
@@ -157,8 +157,8 @@
 
                     <div class="transactions">
 
-                        <div class="row fx-rate">
-                            <div class="shadow card" id="fxtable">
+                        <div class="row">
+                            <div class="shadow card" id="table">
                                 <div class="border-0 card-header">
                                     <div class="align-items-center row">
                                         <div class="col">
